<resources>
    <string name="app_name">EmployeeCard</string>
    <string name="button_employee_card_text">Профиль сотрудника</string>
    <string name="employee_name">ФИО</string>
    <string name="text_works">Статус</string>
    <string name="work_experience_text">0 месяцев</string>
    <string name="employee_position_text">Должность Должность Должность</string>
    <string name="employee_default_description_text">Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест Тест</string>
    <string name="achievements_text">Достижения</string>
    <string name="achievement_description_text">Достижение</string>
    <string name="contact_with_me">Связаться со мной</string>
    <string name="telephone_text">Телефон:</string>
    <string name="email_text">Email</string>
    <string name="test_email_text">test.email@tensor.ru</string>
    <string name="test_phone_number">+79999999999</string>
</resources>