<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EmployeeCardActivity">

        <ImageView
            android:id="@+id/employee_photo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_account_circle_24"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/employee_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/employee_name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/employee_photo" />

        <TextView
            android:id="@+id/works"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:text="@string/text_works"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employee_full_name" />

        <TextView
            android:id="@+id/work_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:text="@string/work_experience_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employee_full_name" />

        <TextView
            android:id="@+id/employee_position"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/employee_position_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/works" />

        <TextView
            android:id="@+id/employee_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:text="@string/employee_default_description_text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/employee_position" />

        <TextView
            android:id="@+id/achievements_text_view"
            android:text="@string/achievements_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/employee_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_achievements"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/achievements_text_view"/>

        <TextView
            android:id="@+id/contact_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_with_me"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/recycle_achievements"/>

        <TextView
            android:id="@+id/telephone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/telephone_text"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_text_view" />

        <TextView
            android:id="@+id/employee_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/test_phone_number"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/telephone_text_view"
            app:layout_constraintTop_toBottomOf="@id/contact_text_view"/>

        <Button
            android:id="@+id/button_call_employee"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/call_button"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/contact_text_view"
            app:layout_constraintRight_toLeftOf="@+id/button_send_message"/>

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/email_text"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone_text_view" />

        <TextView
            android:id="@+id/employee_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/test_email_text"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@+id/employee_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/employee_phone_number"/>

        <Button
            android:id="@+id/button_send_message"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/button_send_message"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/contact_text_view"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>